Proyecto Pair Programming/force-app/main/default/objects/UserModule__c.object
<CustomObject>
    <fields>
        <fullName>ModuleProgress__c</fullName>
        <formula>(UserUnitQuantity__c * 100)/ Module__r.UnitQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ModuleProgress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Module</label>
        <referenceTo>Module__c</referenceTo>
        <relationshipLabel>UserModules</relationshipLabel>
        <relationshipName>UserModules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalPoints__c</fullName>
        <label>TotalPoints</label>
        <summarizedField>UserUnit__c.Points__c</summarizedField>
        <summaryForeignKey>UserUnit__c.UserModule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UserUnitQuantity__c</fullName>
        <label>UserUnitQuantity</label>
        <summaryForeignKey>UserUnit__c.UserModule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>UserModules</relationshipLabel>
        <relationshipName>UserModules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>UserModule</label>
    <nameField>
        <label>UserModule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UserModules</pluralLabel>
    <recordTypes>
        <fullName>UserModule</fullName>
        <active>true</active>
        <label>UserModule</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>